@@ -268,6 +268,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9923: The mailcap module now correctly uses the platform path
+  separator for the MAILCAP environment variable on non-POSIX platforms.
+
 - Issue #12835: Follow up to #6560 that unconditionally prevents use of the
   unencrypted sendmsg/recvmsg APIs on SSL wrapped sockets. Patch by David
   Watson.
